- Rename IntroState to CutSceneState and load intro frames from config file - TODO: Add loading of sounds, texts, etc. from config file

--- a/src/SConscript
+++ b/src/SConscript
@@ -42,7 +42,7 @@ state_sources = [
 #				    "states/Editor.cpp",
     				"states/HouseChoiceMenu.cpp",
     				"states/HouseChoiceInfoMenu.cpp",
-                    "states/IntroState.cpp", 
+                    "states/CutSceneState.cpp", 
                     "states/MenuBase.cpp", 
                     "states/MainMenu.cpp",
                     "states/MainMenuBase.cpp",                    
