start work on class with automatic garbage collection and storing of drawing operations so images will only be loaded into memory when needed

--- a/src/SConscript
+++ b/src/SConscript
@@ -33,6 +33,7 @@ all_sources = [ "Application.cpp",
 		"HouseChoiceInfoMenu.cpp",
                 "Gfx.cpp",
 		"DrawImage.cpp",
+		"GCObject.cpp",
                 "houses.cpp",		# just for colors, hope there will be a better place for these (otpetrik)
                 "Strings.cpp",
                 "Log.cpp",
@@ -101,6 +102,7 @@ pakview_sources = [  "Application.cpp",
                      "State.cpp",
                      "TopLevelState.cpp",
                      "SoundPlayer.cpp",
+					 "GCObject.cpp",
                   ]
 
 
