--- a/src/SConscript
+++ b/src/SConscript
@@ -19,27 +19,28 @@ base_sources = [ "Application.cpp",
               ]
 
 battle_sources = [ 
-#				"TerrainClass.cpp",
-#				"MapClass.cpp",
-#				"gui2/MapWidget.cpp",
-#				"MapGenerator.cpp",
-#				"mmath.cpp",
-#				"MapSeed.cpp",
-#				"PlayerClass.cpp",
-#				"ObjectClass.cpp",
-#				"structures/StructureClass.cpp",
-#				"structures/WallClass.cpp",				
-#				"structures/SiloClass.cpp",
-#				"units/UnitClass.cpp",
-#				"units/GroundUnit.cpp",				
-#				"units/QuadClass.cpp",				
-#				"GameState.cpp",
-#				"PriorityQ.cpp",
+				"TerrainClass.cpp",
+				"MapClass.cpp",
+				"gui2/MapWidget.cpp",
+				"MapGenerator.cpp",
+				"mmath.cpp",
+				"MapSeed.cpp",
+				"PlayerClass.cpp",
+				"ObjectClass.cpp",
+				"structures/StructureClass.cpp",
+				"structures/WallClass.cpp",				
+				"structures/SiloClass.cpp",
+				"units/UnitClass.cpp",
+				"units/GroundUnit.cpp",				
+				"units/QuadClass.cpp",				
+				"GameState.cpp",
+				"PriorityQ.cpp",
+				"ObjectTree.cpp",
                 ]
 
 state_sources = [
 #    				"CampaignMenu.cpp",
-#				    "states/Editor.cpp",
+				    "states/Editor.cpp",
     				"states/HouseChoiceMenu.cpp",
     				"states/HouseChoiceInfoMenu.cpp",
                     "states/CutSceneState.cpp", 
@@ -77,7 +78,7 @@ pak_sources = [
                 "pakfile/sound/Vocfile.cpp",
               ]
 
-all_sources = base_sources + gui_sources + state_sources + pak_sources
+all_sources = base_sources + gui_sources + state_sources + pak_sources + battle_sources
 
 dunelegacy = env.Program("../dunelegacy", ["main.cpp"] + all_sources)
 
