make use of GameMenu class again (got broken at last merge)

--- a/src/SConscript
+++ b/src/SConscript
@@ -61,10 +61,12 @@ state_sources = [
     				"states/HouseChoiceMenu.cpp",
     				"states/HouseChoiceInfoMenu.cpp",
                     "states/CutSceneState.cpp", 
+					"states/GameMenu.cpp",
                     "states/MenuBase.cpp", 
                     "states/MainMenu.cpp",
                     "states/MainMenuBase.cpp",                    
     				"states/MentatMenu.cpp",
+					"states/MentatInfoMenu.cpp",
                     "states/OptionsMenu.cpp",
                     "states/SingleMenu.cpp",
 					"states/SkirmishMenu.cpp",
