since we don't intend to make use of these functions many places in our code, ditch the rest of wrapper crap in pakfile/

--- a/src/SConscript
+++ b/src/SConscript
@@ -82,18 +82,11 @@ gui_sources = [
 
               ]
 
-pak_sources = [ 
-                "pakfile/Cpsfile.cpp",
-                "pakfile/Icnfile.cpp",
-                "pakfile/Shpfile.cpp",
-                "pakfile/Wsafile.cpp",
-              ]
-
-all_sources = base_sources + gui_sources + state_sources + pak_sources
+all_sources = base_sources + gui_sources + state_sources
 
 doonlunacy = env.Program("../doonlunacy", ["main.cpp"] + all_sources + battle_sources)
 
-pakview = env.Program("../pakview", ["tests/pakview.cpp"] + base_sources + pak_sources
+pakview = env.Program("../pakview", ["tests/pakview.cpp"] + base_sources
          + gui_sources + ["states/TopLevelState.cpp", "states/State.cpp"])
 
 Default(doonlunacy)
