add all intro scenes

--- a/cutscenes.cfg
+++ b/cutscenes.cfg
@@ -3,11 +3,296 @@ intro =
 	{
     	filename = "INTRO:WESTWOOD.WSA";
     	palette = "INTRO:WESTWOOD.PAL";
+    	fade_out = true;
+    	hold = 24;
+    	song = 0;
     	fps = 24;
-		hold = 5;
 	},
 	{
-        filename = "INTRO:INTRO1.WSA";
-	}
+    	fade_out = true;
+    	hold = 10;
+    	text = ( (0, "and") );
+    	text_position = (0,0);
+	},
+	{
+    	filename = "INTRO:VIRGIN.CPS";
+    	fade_out = true;
+    	hold = 12;
+	},
 
+	{
+        filename = "INTRO:INTRO1.WSA";
+    	fade_out = true;
+    	hold = 40;
+    	loop = (1,1,0,20);
+    	sound =
+    	(
+    		(30, "Intro_Dune"),
+    		(70, "Intro_TheBuilding"),
+    		(70, "Intro_OfADynasty")
+    	);
+    	
+    	text = ( (70, "a.k.a. Doon Lunacy") );
+    	text_position = (-13,-35);
+    	text_fade = false;
+	},
+
+
+	{
+        filename = "INTRO:INTRO2.WSA";
+    	fade_out = true;
+    	hold = 10;
+    	sound = 
+    	(
+    		(10, "Intro_ThePlanetArrakis"),
+    		(10, "Intro_KnownAsDune")
+    	);
+    	text = ( (10, 3) );
+	},
+
+	{
+        filename = "INTRO:INTRO3.WSA";  
+    	fade_out = true;
+    	hold = 25;
+    	text = 
+    	(
+    	    (0, 4),
+    	    (33, 5)
+    	);
+    	
+        sound = 
+    	(
+    		(0, "Intro_LandOfSand"),
+    		(33, "Intro_Home"),
+    		(33, "Intro_OfTheSpice"),
+    		(33, "Intro_Melange")
+    	);
+	},
+
+	{
+        filename = "INTRO:INTRO9.WSA";  
+    	fade_out = true;
+    	hold = 2;
+    	text =
+    	(
+    	    (0, 6),
+    	    (32, 7)
+    	);
+    	
+        sound = 
+    	(
+    		(0, "Intro_TheSpice"),
+    		(0, "Intro_Controls"),
+    		(0, "Intro_TheEmpire"),
+    		(18, "Intro_Clank"),
+    		(32, "Intro_WhoEver"),
+    		(32, "Intro_ControlsDune"),
+    		(32, "Intro_ControlsTheSpice"),
+    		(53, "Intro_Brakes_2p"),
+    		(61, "Intro_Clank")
+    	);
+    },
+
+	{
+        filename = "INTRO:INTRO10.WSA";  
+    	hold = 10;
+    	text = ( (0, 8) );
+        sound = 
+    	(
+        	(0, "Intro_TheEmperor"),
+    		(0, "Intro_HasProposedAChallenge"),
+    		(0, "Intro_ToEachOfTheHouses")
+    	);
+	},
+
+	{
+        filename = "INTRO:INTRO11.WSA";  
+    	fade_out = true;
+    	text = 
+    	(
+    	    (0, 9),
+    	    (61, 10),
+    	    (83, 11)
+    	);
+        text_color = 208;
+    	loop = (45, 0, 1, 14);
+        sound = 
+    	(
+    		(0, "Intro_TheHouse"),
+    		(0, "Intro_ThatProduces"),
+    		(0, "Intro_TheMostSpice"),
+    		(0, "Intro_WillControlDune"),
+    		(61, "Intro_ThereAreNoSet"),
+    		(61, "Intro_Territories"),
+    		(83, "Intro_AndNo"),
+    		(83, "Intro_RulesOfEngagement")
+    	);
+	},
+
+	{
+        filename = "INTRO:INTRO4.WSA"; 
+    	fade_out = true;
+    	text = 
+    	(
+    	    (11, 12)
+    	);
+    	
+        sound = 
+    	(
+    		(11, "Intro_VastArmies"),
+    		(11, "Intro_HasArrived")
+    	);
+	},
+
+	{
+    	fade_out = true;
+    	hold = 38;
+    	text = 
+    	(
+    	    (0, 13)
+    	);
+    	text_position = (-25,0);
+    	text_fade = false;	
+        sound = 
+    	(
+    		(0, "Intro_AndNow"),
+    		(0, "Intro_3Houses"),
+    		(0, "Intro_ForControl"),
+    		(0, "Intro_OfDune")
+    	);
+	},
+
+	{
+        filename = "INTRO:INTRO6.WSA"; 
+    	fade_out = true;
+    	text = 
+    	(
+    	    (0, 14)
+    	);
+    	
+        sound = 
+    	(
+    		(0, "Intro_TheNobleAtreides"),
+    		(31, "Intro_Glass"),
+    		(32, "Intro_Glass"),
+    		(33, "Intro_Glass"),
+    		(63, "Intro_Glass"),
+    		(64, "Intro_Glass"),
+    		(65, "Intro_Glass")
+    	);
+	},
+
+	{
+        filename = "INTRO:INTRO7A.WSA";
+    	text = 
+    	( 
+    	    (0, 15)
+    	);
+    	
+    	sound = 
+    	(
+    		(0, "Intro_TheInsideous"),
+    		(0, "Intro_Ordos"),
+    		(2, "Intro_Missile_8"),
+    		(7, "Intro_Missile_8"),
+    		(26, "Intro_Missile_8")
+    	);
+	},
+
+	{
+        filename = "INTRO:INTRO7B.WSA"; 
+    	fade_out = true;
+        continuation = true;
+        hold = 5;
+        sound =
+    	(
+    		(10, "Intro_Missile_8")
+    	);
+	},
+
+	{
+        filename = "INTRO:INTRO8A.WSA"; 
+    	text = 
+    	(
+    	    (0, 16)
+    	);
+    	
+        sound = 
+    	(
+    		(0, "Intro_AndThe"),
+    		(0, "Intro_EvilHarkonnen"),
+    		(5, "Sound_Gun"),
+    		(8, "Sound_Gun")
+    	);
+	},
+
+	{
+        filename = "INTRO:INTRO8B.WSA";  
+        continuation = true;
+        sound =
+    	(
+    		(1, "Sound_Gun")
+    	);
+	},
+
+	{
+        filename = "INTRO:INTRO8C.WSA"; 
+    	fade_out = true;
+        continuation = true;
+        sound = 
+    	(
+    		(16, "Sound_ExplosionSmall"),
+    		(25, "Sound_ExplosionMedium")
+    	);
+	},
+
+	{
+        filename = "INTRO:INTRO5.WSA"; 
+    	fade_out = true;
+    	loop = (3, 0, 10, 0);
+    	text = 
+    	(
+    	    (0, 17)
+    	);
+    	
+        sound = 
+    	(
+    		(0, "Intro_OnlyOneHouse"),
+    		(0, "Intro_WillPrevail")
+    	);
+	},
+
+	{
+    	fade_out = true;
+    	hold = 22;
+    	text = 
+    	(
+    	    (0, 18)
+    	);
+    	
+    	text_position = (-20,0);
+    	text_fade = false;	
+        sound = 
+    	(
+    		(0, "Intro_Your"),
+    		(0, "Intro_BattleForDune"),
+    		(0, "Intro_Begins")
+    	);
+	},
+
+	{
+    	fade_out = true;
+    	hold = 20;
+    	text = 
+    	(   
+    	    (0, 19)
+    	);
+    	
+    	text_postion = (-20,0);
+    	text_fade = false;
+        sound =
+    	(
+    		(0, "Intro_Now")
+    	);
+	}
 );
