add song support

--- a/cutscenes.cfg
+++ b/cutscenes.cfg
@@ -5,19 +5,33 @@ intro =
     	palette = "INTRO:WESTWOOD.PAL";
     	fade_out = true;
     	hold = 24;
-    	song = 0;
     	fps = 24;
+    	song = 0;
 	},
+
 	{
     	fade_out = true;
     	hold = 10;
     	text = ( (0, "and") );
     	text_position = (0,0);
 	},
+
 	{
     	filename = "INTRO:VIRGIN.CPS";
     	fade_out = true;
     	hold = 12;
+	},
+
+	{
+    	fade_out = true;
+    	hold = 10;
+    	song = 1;
+    	text = 
+    	(
+    	    (0, 1)
+    	);
+    	
+    	text_position = (0,0);
 	},
 
 	{
