start implementing loop stuff

--- a/cutscenes.cfg
+++ b/cutscenes.cfg
@@ -1,5 +1,6 @@
 intro = 
 (
+/*
 	{
     	filename = "INTRO:WESTWOOD.WSA";
     	palette = "INTRO:WESTWOOD.PAL";
@@ -38,7 +39,12 @@ intro =
         filename = "INTRO:INTRO1.WSA";
     	fade_out = true;
     	hold = 40;
-    	loop = (1,1,0,20);
+    	loop = {
+				 loopat = 1;
+				 rewindto = 1;
+				 loops = 0;
+				 wait = 20;
+			   };
     	sound =
     	(
     		(30, "Intro_Dune"),
@@ -118,7 +124,7 @@ intro =
     		(0, "Intro_ToEachOfTheHouses")
     	);
 	},
-
+*/
 	{
         filename = "INTRO:INTRO11.WSA";  
     	fade_out = true;
@@ -129,7 +135,12 @@ intro =
     	    (83, 11)
     	);
         text_color = 208;
-    	loop = (45, 0, 1, 14);
+    	loop = {
+				 loopat = 45;
+				 rewindto = 0;
+				 loops = 1;
+				 wait = 14;
+			   };
         sound = 
     	(
     		(0, "Intro_TheHouse"),
@@ -263,7 +274,13 @@ intro =
 	{
         filename = "INTRO:INTRO5.WSA"; 
     	fade_out = true;
-    	loop = (3, 0, 10, 0);
+    	loop = {
+				 loopat = 3;
+				 rewindto = 0;
+				 loops = 10;
+				 wait = 0;
+			   };
+
     	text = 
     	(
     	    (0, 17)
