--- a/src/SConscript
+++ b/src/SConscript
@@ -36,6 +36,7 @@ battle_sources = [
 				"GameState.cpp",
 				"PriorityQ.cpp",
 				"ObjectTree.cpp",
+				"ObjectPointer.cpp",
                 ]
 
 state_sources = [
