* replace CutSceneState class * merge Animation class with AnimationLabel class

--- a/src/SConscript
+++ b/src/SConscript
@@ -60,7 +60,7 @@ state_sources = [
 				    "states/Editor.cpp",
     				"states/HouseChoiceMenu.cpp",
     				"states/HouseChoiceInfoMenu.cpp",
-                    "states/CutSceneState.cpp", 
+                    "states/CutSceneState2.cpp", 
 					"states/GameMenu.cpp",
                     "states/MenuBase.cpp", 
                     "states/MainMenu.cpp",
