improve timings etc.

--- a/cutscenes.cfg
+++ b/cutscenes.cfg
@@ -1,6 +1,5 @@
 intro = 
 (
-/*
 	{
     	filename = "INTRO:WESTWOOD.WSA";
     	palette = "INTRO:WESTWOOD.PAL";
@@ -37,6 +36,7 @@ intro =
 
 	{
         filename = "INTRO:INTRO1.WSA";
+		fps = 12;
     	fade_out = true;
     	hold = 40;
     	loop = {
@@ -47,18 +47,20 @@ intro =
 			   };
     	sound =
     	(
-    		(30, "Intro_Dune"),
+    		(50, "Intro_Dune"),
     		(70, "Intro_TheBuilding"),
     		(70, "Intro_OfADynasty")
     	);
     	
     	text = ( (70, "a.k.a. Doon Lunacy") );
-    	text_position = (0,0);
+    	text_position = (0,30);
+		anim_position = (0, -100);		
     	text_fade = false;
 	},
 
 	{
         filename = "INTRO:INTRO2.WSA";
+		fade_in = true;
     	fade_out = true;
     	hold = 10;
     	sound = 
@@ -71,6 +73,7 @@ intro =
 
 	{
         filename = "INTRO:INTRO3.WSA";  
+		fade_in = true;
     	fade_out = true;
     	hold = 25;
     	text = 
@@ -87,8 +90,10 @@ intro =
     		(33, "Intro_Melange")
     	);
 	},
+
 	{
-        filename = "INTRO:INTRO9.WSA";  
+        filename = "INTRO:INTRO9.WSA";
+		fade_in = true;
     	fade_out = true;
     	hold = 2;
 		fps = 6;
@@ -127,7 +132,7 @@ intro =
 	{
         filename = "INTRO:INTRO11.WSA";  
     	fade_out = true;
-		fps = 10;
+		fps = 8.6;
     	text = 
     	(
     	    (0, 9),
@@ -138,8 +143,8 @@ intro =
     	loop = {
 				 loopat = 44;
 				 rewindto = 0;
-				 loops = 1;
-				 wait = 14;
+				 loops = 0;
+				 wait = 16;
 			   };
         sound = 
     	(
@@ -170,7 +175,7 @@ intro =
 	},
 
 	{
-    	fade_out = true;
+    	fade_in = true;
     	hold = 38;
     	text = 
     	(
@@ -190,6 +195,7 @@ intro =
 	{
         filename = "INTRO:INTRO6.WSA"; 
     	fade_out = true;
+		fps = 8;
     	text = 
     	(
     	    (0, 14)
@@ -270,7 +276,7 @@ intro =
     		(25, "Sound_ExplosionMedium")
     	);
 	},
-*/
+
 	{
         filename = "INTRO:INTRO5.WSA"; 
     	fade_out = true;
@@ -319,7 +325,7 @@ intro =
     	    (0, 19)
     	);
     	
-    	text_postion = (0,0);
+    	text_position = (0,0);
     	text_fade = false;
         sound =
     	(
