--- a/src/SConscript
+++ b/src/SConscript
@@ -61,6 +61,7 @@ gui_sources = [
                 "gui2/VBox.cpp",
                 "gui2/Label.cpp",
                 "gui2/Frame.cpp",
+                "gui2/HScale.cpp",
 
               ]
 
