add missing cutscenes from old cutscenes.dunetxt

--- a/cutscenes.cfg
+++ b/cutscenes.cfg
@@ -348,3 +348,42 @@ intro =
     	);
 	}
 );
+
+atreides =
+(
+    {
+        filename = "FINALE:AFINALA.WSA";        
+    },
+    
+    {
+        filename = "FINALE:AFINALB.WSA";
+    }
+);
+
+ordos =
+(
+    {
+        filename = "FINALE:OFINALA.WSA";        
+    },
+
+    {
+        filename = "FINALE:OFINALD.WSA";
+    }
+);
+
+harkonnen =
+(
+    {
+        filename = "FINALE:HFINALA.WSA";        
+    },
+    
+    {
+        filename = "FINALE:HFINALB.WSA";
+    },
+    
+    {
+        continuation = true;
+        filename = "FINALE:HFINALC.WSA";
+    }
+);
+
