don't build stuff we're not gonna use (that's to be deleted actually)

--- a/src/SConscript
+++ b/src/SConscript
@@ -28,25 +28,25 @@ battle_sources = [
 				"MapSeed.cpp",
 				"PlayerClass.cpp",
 				"ObjectClass.cpp",
-				"structures/BarracksClass.cpp",
-				"structures/ConstructionYardClass.cpp",
-				"structures/GunTurretClass.cpp",
-				"structures/HeavyFactoryClass.cpp",
-				"structures/HighTechFactoryClass.cpp",
-				"structures/IXClass.cpp",
-				"structures/LightFactoryClass.cpp",
-				"structures/PalaceClass.cpp",
-				"structures/RadarClass.cpp",
-				"structures/RefineryClass.cpp",
-				"structures/RepairYardClass.cpp",
-				"structures/RocketTurretClass.cpp",
-				"structures/SiloClass.cpp",
-				"structures/StarPortClass.cpp",
+				#"structures/BarracksClass.cpp",
+				#"structures/ConstructionYardClass.cpp",
+			#	"structures/GunTurretClass.cpp",
+			#	"structures/HeavyFactoryClass.cpp",
+			#	"structures/HighTechFactoryClass.cpp",
+			#	"structures/IXClass.cpp",
+			#	"structures/LightFactoryClass.cpp",
+			#	"structures/PalaceClass.cpp",
+			#	"structures/RadarClass.cpp",
+			#	"structures/RefineryClass.cpp",
+			#	"structures/RepairYardClass.cpp",
+			#	"structures/RocketTurretClass.cpp",
+			#	"structures/SiloClass.cpp",
+			#	"structures/StarPortClass.cpp",
 				"structures/StructureClass.cpp",
 				#"structures/TurretClass.cpp",
-				"structures/WallClass.cpp",
-				"structures/WindTrapClass.cpp",
-				"structures/WORClass.cpp",
+			#	"structures/WallClass.cpp",
+			#	"structures/WindTrapClass.cpp",
+			#	"structures/WORClass.cpp",
 				"units/UnitClass.cpp",
 				"units/GroundUnit.cpp",				
 				"units/QuadClass.cpp",				
