- Add stub construction yard, trike and infantry classes - Move some code from MapGenerator and leave only code that generates map

--- a/src/SConscript
+++ b/src/SConscript
@@ -27,6 +27,9 @@ base_sources = [ "Application.cpp",
 				"structures/StructureClass.cpp",
 				"structures/WallClass.cpp",				
 				"structures/SiloClass.cpp",
+                "structures/ConstructionYardClass.cpp",				
+				"units/TrikeClass.cpp",
+				"units/InfantryClass.cpp",
 				"units/UnitClass.cpp",
 				"units/GroundUnit.cpp",				
 				"units/QuadClass.cpp",				
