oops, forgot to rename from LIBEASTWOOD to DOONLUNACY..

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,12 +1,11 @@
-PROJECT(LIBEASTWOOD)
-SET( PACKAGE "LIBEASTWOOD" )
-SET( CMAKE_MODULE_PATH ${LIBEASTWOOD_SOURCE_DIR}/cmake/modules )
+PROJECT(DOONLUNACY)
+SET( CMAKE_MODULE_PATH ${DOONLUNACY_SOURCE_DIR}/cmake/modules )
 cmake_minimum_required(VERSION 2.6)
 
 
 SET(VERSION "0.95")
 
-SET( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -pedantic -O0 -Wno-long-long -Wno-variadic-macros -g -I${LIBEASTWOOD_SOURCE_DIR}/include" )
+SET( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -pedantic -O0 -Wno-long-long -Wno-variadic-macros -g -I${DOONLUNACY_SOURCE_DIR}/include" )
 
 IF( DEFINED CMAKE_INSTALL_PREFIX )
   SET( INSTALL_PREFIX ${CMAKE_INSTALL_PREFIX} )
