start on migration to python

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,6 +49,13 @@ IF (Boost_FOUND)
   LINK_DIRECTORIES(${Boost_LIBRARY_DIRS})
 ENDIF(Boost_FOUND)
 
+FIND_PACKAGE(PythonLibs REQUIRED)
+IF (PYTHONLIBS_FOUND)
+  MESSAGE( STATUS "python found: includes in ${PYTHON_LIBRARY}")
+  INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})
+ENDIF(PYTHONLIBS_FOUND)
+
+
 
 
 ADD_SUBDIRECTORY( src )
