set INCLUDE_DIRECTORIES properly so that their dependencies gets tracked correctly

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,4 @@
-INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
+INCLUDE_DIRECTORIES(${DOONLUNACY_SOURCE_DIR}/include)
 
 SET( DOONLUNACY_BASE_SRCS
   Application.cpp
