* move python init function to a separate file * add python object converters for SPoint, UPoint, FloatPoint & Rect

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -20,6 +20,7 @@ SET( DOONLUNACY_BASE_SRCS
   mmath.cpp
   MapSeed.cpp
   PlayerClass.cpp
+  PythonObjects.cpp
   #structures/BarracksClass.cpp
   #structures/ConstructionYardClass.cpp
   #structures/GunTurretClass.cpp
