* ditch ObjectPointer as all objects now are instances of ObjectClass * replace ObjectTree with STL hash maps which will make things a lot simpler, cleaner and more optimized

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -48,8 +48,8 @@ SET( DOONLUNACY_BASE_SRCS
   objects/WeaponClass.cpp
   GameMan.cpp
   PriorityQ.cpp
-  ObjectTree.cpp
-  ObjectPointer.cpp
+  #ObjectTree.cpp
+  #ObjectPointer.cpp
 )
 
 SET( DOONLUNACY_STATE_SRCS
