drop SDL_net requirement for now as we haven't even started on implementing it yet..

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,12 +28,12 @@ ELSE ( NOT SDLMIXER_FOUND)
 ENDIF( NOT SDLMIXER_FOUND)
 
 
-FIND_PACKAGE(SDL_net REQUIRED)
-IF ( NOT SDLNET_FOUND)
-  MESSAGE( FATAL_ERROR " SDL_net-devel not found" )
-ELSE ( NOT SDLNET_FOUND)
-  INCLUDE_DIRECTORIES(${SDLNET_INCLUDE_DIR})
-ENDIF( NOT SDLNET_FOUND)
+#FIND_PACKAGE(SDL_net REQUIRED)
+#IF ( NOT SDLNET_FOUND)
+#  MESSAGE( FATAL_ERROR " SDL_net-devel not found" )
+#ELSE ( NOT SDLNET_FOUND)
+#  INCLUDE_DIRECTORIES(${SDLNET_INCLUDE_DIR})
+#ENDIF( NOT SDLNET_FOUND)
 
 FIND_PACKAGE(LibEastwood REQUIRED)
 IF ( NOT LIBEASTWOOD_FOUND)
