--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -115,12 +115,14 @@ TARGET_LINK_LIBRARIES(../doonlunacy boost_filesystem-mt )
 TARGET_LINK_LIBRARIES(../doonlunacy boost_python-mt )
 TARGET_LINK_LIBRARIES(../doonlunacy ${PYTHON_LIBRARY} )
 
+IF(BUILD_UTIL)
 ADD_EXECUTABLE(../gamedatautil ${GAMEDATAUTIL_SRCS} )
 TARGET_LINK_LIBRARIES(../gamedatautil ${LIBEASTWOOD_LIBRARIES} )
 TARGET_LINK_LIBRARIES(../gamedatautil boost_signals-mt )
 TARGET_LINK_LIBRARIES(../gamedatautil boost_filesystem-mt )
 TARGET_LINK_LIBRARIES(../gamedatautil boost_python-mt )
 TARGET_LINK_LIBRARIES(../gamedatautil ${PYTHON_LIBRARY} )
+ENDIF(BUILD_UTIL)
 
 
 #ADD_EXECUTABLE(../pakview ${PAKVIEW_SRCS})
