--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -107,21 +107,25 @@ SET( GAMEDATAUTIL_SRCS
   ${DOONLUNACY_BASE_SRCS}
 )
 
-ADD_EXECUTABLE(../doonlunacy ${DOONLUNACY_SRCS})
+ADD_EXECUTABLE(doonlunacy ${DOONLUNACY_SRCS})
 
-TARGET_LINK_LIBRARIES(../doonlunacy ${LIBEASTWOOD_LIBRARIES} )
-TARGET_LINK_LIBRARIES(../doonlunacy boost_signals-mt )
-TARGET_LINK_LIBRARIES(../doonlunacy boost_filesystem-mt )
-TARGET_LINK_LIBRARIES(../doonlunacy boost_python-mt )
-TARGET_LINK_LIBRARIES(../doonlunacy ${PYTHON_LIBRARY} )
+TARGET_LINK_LIBRARIES(doonlunacy ${LIBEASTWOOD_LIBRARIES} )
+TARGET_LINK_LIBRARIES(doonlunacy boost_signals-mt )
+TARGET_LINK_LIBRARIES(doonlunacy boost_filesystem-mt )
+TARGET_LINK_LIBRARIES(doonlunacy boost_python-mt )
+TARGET_LINK_LIBRARIES(doonlunacy ${PYTHON_LIBRARY} )
+
+INSTALL(TARGETS doonlunacy DESTINATION ${CMAKE_INSTALL_PREFIX}/games )
 
 IF(BUILD_UTIL)
-ADD_EXECUTABLE(../gamedatautil ${GAMEDATAUTIL_SRCS} )
-TARGET_LINK_LIBRARIES(../gamedatautil ${LIBEASTWOOD_LIBRARIES} )
-TARGET_LINK_LIBRARIES(../gamedatautil boost_signals-mt )
-TARGET_LINK_LIBRARIES(../gamedatautil boost_filesystem-mt )
-TARGET_LINK_LIBRARIES(../gamedatautil boost_python-mt )
-TARGET_LINK_LIBRARIES(../gamedatautil ${PYTHON_LIBRARY} )
+ADD_EXECUTABLE(gamedatautil ${GAMEDATAUTIL_SRCS} )
+TARGET_LINK_LIBRARIES(gamedatautil ${LIBEASTWOOD_LIBRARIES} )
+TARGET_LINK_LIBRARIES(gamedatautil boost_signals-mt )
+TARGET_LINK_LIBRARIES(gamedatautil boost_filesystem-mt )
+TARGET_LINK_LIBRARIES(gamedatautil boost_python-mt )
+TARGET_LINK_LIBRARIES(gamedatautil ${PYTHON_LIBRARY} )
+
+INSTALL(TARGETS gamedatautil DESTINATION ${CMAKE_INSTALL_PREFIX}/games/doonlunacy-util
 ENDIF(BUILD_UTIL)
 
 
