* add cpack stuff for creating source package * change version to 0.96-techpreview1

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,20 @@
 PROJECT(DOONLUNACY)
+SET( PACKAGE "doonlunacy" )
 SET( CMAKE_MODULE_PATH ${DOONLUNACY_SOURCE_DIR}/cmake/modules )
 cmake_minimum_required(VERSION 2.6)
 
 
-SET(VERSION "0.96")
+SET(VERSION "0.96-techpreview1")
+
+SET(CPACK_PACKAGE_VERSION, "${VERSION}")
+
+SET(CPACK_SOURCE_IGNORE_FILES ".bzr" "build" ".swp$" ".*~" )
+
+SET( CPACK_PACKAGE_NAME, "${PACKAGE}" )
+SET( CPACK_SOURCE_GENERATOR "TGZ;TXZ")
+SET( CPACK_SOURCE_PACKAGE_FILE_NAME "${PACKAGE}-${VERSION}" )
+
+INCLUDE(CPack)
 
 IF ( DEFINED SHARE_INSTALL_PREFIX )
   SET( DOONLUNACY_GAME_DIR ${SHARE_INSTALL_PREFIX}/games/doonlunacy )
