--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ SET( CMAKE_MODULE_PATH ${DOONLUNACY_SOURCE_DIR}/cmake/modules )
 cmake_minimum_required(VERSION 2.6)
 
 
-SET(VERSION "0.96-techpreview1")
+SET(VERSION "0.96-tp1")
 
 SET(CPACK_PACKAGE_VERSION, "${VERSION}")
 
@@ -22,7 +22,7 @@ ELSE ( DEFINED SHARE_INSTALL_PREFIX )
   SET( DOONLUNACY_GAME_DIR "." )
 ENDIF( DEFINED SHARE_INSTALL_PREFIX )
  
-SET( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -pedantic -O0 -Wno-long-long -Wno-variadic-macros -g -DGAME_DIR='\"${DOONLUNACY_GAME_DIR}\"'" )
+SET( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -pedantic -O0 -Wno-long-long -Wno-variadic-macros -g -DGAME_DIR='\"${DOONLUNACY_GAME_DIR}\"' -DVERSION='\"${VERSION}\"'" )
 
 IF( DEFINED CMAKE_INSTALL_PREFIX )
   SET( INSTALL_PREFIX ${CMAKE_INSTALL_PREFIX} )
