Check each Boost components to be used, and check for the '-mt' versions of them

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -59,7 +59,8 @@ ELSE ( NOT LIBEASTWOOD_FOUND)
   INCLUDE_DIRECTORIES(${LIBEASTWOOD_INCLUDE_DIR})
 ENDIF( NOT LIBEASTWOOD_FOUND)
 
-FIND_PACKAGE(Boost REQUIRED)
+SET(Boost_USE_MULTITHREADED ON)
+FIND_PACKAGE(Boost COMPONENTS signals python filesystem REQUIRED)
 IF (Boost_FOUND)
   MESSAGE( STATUS "boost found: includes in ${Boost_INCLUDE_DIRS}, library in ${Boost_LIBRARY_DIRS}")
   INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
