Link binaries against Boost libraries using CMake variables instead of hard-coded values.
This allows to compile on computer which have several versions of the same
Boost library (for example, boost_python-mt-py25 and boost_python-mt-py26 on
Debian)

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -111,9 +111,7 @@ ADD_EXECUTABLE(doonlunacy ${DOONLUNACY_SRCS})
 
 TARGET_LINK_LIBRARIES(doonlunacy ${LIBEASTWOOD_LIBRARIES} )
 TARGET_LINK_LIBRARIES(doonlunacy SDL_eastwood )
-TARGET_LINK_LIBRARIES(doonlunacy boost_signals-mt )
-TARGET_LINK_LIBRARIES(doonlunacy boost_filesystem-mt )
-TARGET_LINK_LIBRARIES(doonlunacy boost_python-mt )
+TARGET_LINK_LIBRARIES(doonlunacy ${Boost_LIBRARIES} )
 TARGET_LINK_LIBRARIES(doonlunacy ${PYTHON_LIBRARY} )
 
 INSTALL(TARGETS doonlunacy DESTINATION ${CMAKE_INSTALL_PREFIX}/games )
@@ -121,9 +119,7 @@ INSTALL(TARGETS doonlunacy DESTINATION ${CMAKE_INSTALL_PREFIX}/games )
 IF(BUILD_UTIL)
 ADD_EXECUTABLE(gamedatautil ${GAMEDATAUTIL_SRCS} )
 TARGET_LINK_LIBRARIES(gamedatautil ${LIBEASTWOOD_LIBRARIES} )
-TARGET_LINK_LIBRARIES(gamedatautil boost_signals-mt )
-TARGET_LINK_LIBRARIES(gamedatautil boost_filesystem-mt )
-TARGET_LINK_LIBRARIES(gamedatautil boost_python-mt )
+TARGET_LINK_LIBRARIES(gamedatautil ${Boost_LIBRARIES} )
 TARGET_LINK_LIBRARIES(gamedatautil ${PYTHON_LIBRARY} )
 
 INSTALL(TARGETS gamedatautil DESTINATION ${CMAKE_INSTALL_PREFIX}/games/doonlunacy-util )
