link against SDL & SDL_mixer

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -112,6 +112,8 @@ ADD_EXECUTABLE(doonlunacy ${DOONLUNACY_SRCS})
 TARGET_LINK_LIBRARIES(doonlunacy ${LIBEASTWOOD_LIBRARIES} )
 TARGET_LINK_LIBRARIES(doonlunacy ${Boost_LIBRARIES} )
 TARGET_LINK_LIBRARIES(doonlunacy ${PYTHON_LIBRARY} )
+TARGET_LINK_LIBRARIES(doonlunacy ${SDLMIXER_LIBRARY} )
+TARGET_LINK_LIBRARIES(doonlunacy ${SDL_LIBRARY} )
 
 INSTALL(TARGETS doonlunacy DESTINATION ${CMAKE_INSTALL_PREFIX}/games )
 
